# HTMLLogs

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
HTMLlogs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
htmllogs/: config.py  utils.py
tests/: test_htmllogs.py
