[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HTMLlogs"
version = "0.1.0"
description = "Turn Python logs into interactive HTML with filters and JSON highlighting"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DeLisov", email = "Du.Lisov.Mail@gmail.com"}
]
keywords = ["logging", "html", "logs", "interactive", "json"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/mintlygit/HTMLLogs"
BugReports = "https://github.com/mintlygit/HTMLLogs/issues"

[tool.setuptools.packages.find]
include = ["htmllogs*"]

[tool.setuptools.package-data]
htmllogs = ["templates/*.html"]